# OpenCADStudio

./: COMMANDS.md  Cargo.toml  INTEGRATION_GAPS.md  README.md  RENDERING_OPTIMIZATION.md  ROADMAP.md  Trunk.toml  build.rs  index.html
.github/workflows/: release.yml  rust.yml
assets/fonts/: gdt.lff
crates/dwg-thumbnailer-win/: Cargo.toml
crates/dwg-thumbnailer-win/src/: lib.rs
crates/ocs_plugin_api/: Cargo.toml
docs/: native-vs-web.md  tessellation.md
packaging/: Info.plist  OpenCADStudio.desktop  build_macos_signed.sh
src/: cli.rs  command.rs  config.rs  lib.rs  main.rs  patreon.rs  snap.rs  sys.rs  update_check.rs  videos.rs
src/app/: automation.rs  cmd_result.rs  command_driver.rs  commands.rs  document.rs  helpers.rs  history.rs  layers.rs  mod.rs  model_ops.rs  mtext_editor.rs  plugin_host.rs  properties.rs  recent.rs  settings.rs  style_ops.rs  update.rs  view.rs
src/command/: mod.rs
src/entities/: arc.rs  attribute.rs  circle.rs  common.rs  dimension.rs  ellipse.rs  field.rs  hatch.rs  helix.rs  insert.rs  leader.rs  light.rs  line.rs  lwpolyline.rs  mesh.rs  mline.rs  mod.rs  mtext.rs  multileader.rs  names.rs  ole2frame.rs  point.rs  polyline.rs  raster_image.rs  ray.rs  shape.rs  solid.rs  solid3d.rs  spline.rs  table.rs  text.rs  text_support.rs  tolerance.rs  traits.rs  underlay.rs  viewport.rs
src/io/: file_association.rs  linetypes.rs  mod.rs  obj.rs  pdf_export.rs  print_to_printer.rs  single_instance.rs  xref.rs
src/modules/: mod.rs  registry.rs
src/plugin/: external.rs  marketplace.rs  mod.rs  registry.rs
src/scene/: acad_to_truck.rs  block_cache.rs  camera_ops.rs  cxf.rs  entity.rs  hatch_model.rs  hit_test.rs  image_model.rs  mod.rs  model_solid.rs  modify.rs  paper.rs  paper_canvas.rs  project.rs  quadtree.rs  render.rs  scene_markers.rs  selection.rs  solid3d_tess.rs  spline_tess.rs  tessellate.rs  viewport_pane.rs  wire_model.rs
src/shaders/: clip_mask.wgsl  face3d.wgsl  hatch.wgsl  hatch_batched.wgsl  hatch_web.wgsl  image.wgsl  mesh.wgsl  text.wgsl  viewcube.wgsl  wipeout.wgsl  wire.wgsl  wire_indexed.wgsl
src/snap/: mod.rs
src/ui/: color_select.rs  command_line.rs  dimstyle.rs  icons.rs  layers.rs  mod.rs  modal.rs  overlay.rs  plugin_manager.rs  properties.rs  statusbar.rs  statusbar_config.rs  (+6 more)
tests/: active_space_roundtrip.rs  block_hatch_export.rs  dim_copy_check.rs  pdf_export_text_check.rs
(+171 files in other folders)
