[package]
name = "H7CAD"
version = "0.3.7"
edition = "2021"
build = "build.rs"

[dependencies]
iced = { version = "0.14", features = ["debug", "image", "svg", "advanced", "canvas"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
truck-modeling = "0.6"
truck-meshalgo = { version = "0.4", default-features = false, features = ["tessellation"] }
truck-polymesh = "0.6"
rfd = "0.15"
acadrust = "0.3.4"
open = "5"
printpdf = "0.9.1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
rayon = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[patch.crates-io]
# TEMP: tracks fix/wipeout-clip-vertices on HakanSeven12/acadrust, which
# stacks the wipeout/raster-image clip-vertex fix on top of the earlier
# hatch boundary-handle cap. Revert to `branch = "main"` once both
# upstream PRs land.
acadrust = { git = "https://github.com/HakanSeven12/acadrust", branch = "fix/wipeout-clip-vertices" }
